tests/NormalTests/paczka1/small_fuzzy/29235758.err
Error in line 2: dzO1xv S487 10,3
Error in line 4: dzO1xv A763 94,2
Error in line 7: dzO1xv S487 4,6
Error in line 1: ZPYOBmiL04 S487 39,7
Error in line 10: S487 A972 58,0
